components/base/custom.css
#formAdd{
    margin-bottom:40px
}
.input-group-prepend{
    margin-left: -1px;
}
/*.address-billing .panel{
    min-height: 190px;
}
 .address-billing .panel .panel-body{
    overflow-x: scroll;
} */
/* .entities-data tfoot{
    display:block;
} */
.entities-data tfoot th:nth-child(2) input, .entities-data tfoot th:nth-child(3) input{
    display:none;
}

.dl-horizontal dt{
    text-align: left !important;
    min-width:120px !important;
}
.attachment-table table tfoot{
    display: none;
}
.four-boxes{
    margin-bottom: 20px;
}
.four-boxes .panel-header, .entity-form .panel-header{
    background: #333;
    padding-left: 15px;
    color: #fff;
}
.four-boxes .panel, .entity-form .panel{
    margin-top:0;
}
.four-boxes .panel .dl-horizontal{
    display: inline-block;
    
}
.four-boxes .panel .dl-horizontal .border-section, .four-boxes .panel .border-section{
    border-bottom: 1px solid #ccc;
    display: block;
    padding-bottom:0
}
.four-boxes .panel .border-section{
    padding-bottom:15px
}
.four-boxes .panel .dl-horizontal dd{
    line-height:50px
}
dl + dl{
    margin-top: 0px;
}
.attachment{
    display: block;
    width: 100%;
}
.input-group .custom-file{
    margin-top: 7px;
}
.compliance input[type=checkbox]{
    width: auto;
}
@media (max-width:768px){
    .four-boxes .panel .border-section{
        margin-bottom:15px
    }
}
@media (max-width:667px){
    .four-boxes .panel .border-section{
        margin-bottom:15px
    }
}
@media (max-width:480px){
    .four-boxes .panel .border-section{
        margin-bottom:15px
    }
}
@media (max-width:320px){
    .four-boxes{
        width: 100%;
    }
    .four-boxes .panel .border-section{
        margin-bottom:10px
    }
}

